--- a/LeaveManager.Api/Web.config
+++ b/LeaveManager.Api/Web.config
@@ -10,6 +10,7 @@
   </configSections>
 	<connectionStrings>
 		<add name="AuthContext" connectionString="Data Source=.\sqlexpress;Initial Catalog=LeaveManager;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+		<add name="EventStore" connectionString="Data Source=.\sqlexpress;Initial Catalog=LeaveManager;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
 	</connectionStrings>	
   <appSettings></appSettings>
   <system.web>
@@ -53,6 +54,14 @@
       <dependentAssembly>
         <assemblyIdentity name="Microsoft.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.1.0.0" newVersion="2.1.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http.WebHost" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.0.0" newVersion="5.2.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http.Owin" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.2.0" newVersion="5.2.2.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
