--- a/LeaveManager.Api/packages.config
+++ b/LeaveManager.Api/packages.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Dapper" version="1.38" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.1.0" targetFramework="net45" />
-  <package id="Microsoft.AspNet.Identity.Owin" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.2" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.2" targetFramework="net45" />
@@ -14,6 +14,16 @@
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Cookies" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.OAuth" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
+  <package id="NEventStore" version="5.1.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net45" />
+  <package id="Ninject" version="3.2.0.0" targetFramework="net45" />
+  <package id="Ninject.Extensions.ContextPreservation" version="3.2.0.0" targetFramework="net45" />
+  <package id="Ninject.Extensions.NamedScope" version="3.2.0.0" targetFramework="net45" />
+  <package id="Ninject.Web.Common" version="3.2.0.0" targetFramework="net45" />
+  <package id="Ninject.Web.Common.OwinHost" version="3.2.0.0" targetFramework="net45" />
+  <package id="Ninject.Web.WebApi" version="3.2.3.0" targetFramework="net45" />
+  <package id="Ninject.Web.WebApi.OwinHost" version="3.2.3.0" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net45" />
+  <package id="WebActivatorEx" version="2.0" targetFramework="net45" />
 </packages>
