--- a/LeaveManager.Api/assets/bower.json
+++ b/LeaveManager.Api/assets/bower.json
@@ -19,7 +19,8 @@
     "restangular": "~1.4.0",
     "bootstrap-sass-official": "~3.3.1",
     "angular-bootstrap": "~0.12.0",
-    "angular-local-storage": "~0.1.5"
+    "angular-local-storage": "~0.1.5",
+    "moment": "~2.8.4"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.6"
