--- a/LeaveManager.Api/LeaveManager.Api.csproj
+++ b/LeaveManager.Api/LeaveManager.Api.csproj
@@ -169,11 +169,9 @@
     </Compile>
     <Compile Include="Infrastructure\FakeBusDispatcher.cs" />
     <Compile Include="Models\UserModel.cs" />
+    <Compile Include="Models\WorkingDaysModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Query\IQuery.cs" />
-    <Compile Include="Query\LeaveById.cs" />
-    <Compile Include="Query\ListLeavesToEvaluate.cs" />
-    <Compile Include="Query\ListLeavesByUserName.cs" />
+    <Compile Include="Domain\Queries.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
