added statistics in dashboard, and improved several minor cases.

--- a/LeaveManager.Api/LeaveManager.Api.csproj
+++ b/LeaveManager.Api/LeaveManager.Api.csproj
@@ -152,6 +152,7 @@
     <Compile Include="AuthRepository.cs" />
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\BaseApiController.cs" />
+    <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\LeaveController.cs" />
     <Compile Include="Domain\Commands.cs" />
     <Compile Include="Domain\Events.cs" />
